@@ -337,4 +337,5 @@ $string['medical problems']='Medical problems';
 $string['regular medication']='Regular medication';
 $string['persistent problems']='Persistant problems';
 $string['transport']='Transport';
+$string['']='';
 ?>
