@@ -183,4 +183,7 @@ $string['emailsentto']='Email queued to send to';
 $string['smssentto']='SMS queued to send to';
 $string['custom']='Custom';
 $string['selectfromthegroups']='Select one or more groups from the options below.';
+$string['saveview']='Save view';
+$string['selectview']='Select view';
+$string['']='';
 ?>
